# dao-contracts

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  README.md  build.sh  generate_subscan_verify.sh  mocha.testrun.log.html  package.json  pnpm-lock.yaml  runTests.sh  runWithoutWarnings.ts  test-chain-timestamp  tsconfig.json  typechain.config.json  updateTestDbBackup.sh
.husky/: pre-commit
artifacts/: a_token.contract  a_token.json  a_token.wasm  abax_governor.contract  abax_governor.json  abax_governor.wasm  abax_inflator.contract  abax_inflator.json  abax_inflator.wasm  abax_tge.contract  abax_tge.json  abax_tge.wasm  abax_token.contract  abax_token.json  abax_token.wasm  abax_treasury.contract  abax_treasury.json  abax_treasury.wasm  abax_vester.contract  abax_vester.json  abax_vester.wasm  balance_viewer.contract  balance_viewer.json  balance_viewer.wasm  dia_oracle.contract  dia_oracle.json  dia_oracle.wasm  fee_reduction_provider_mock.contract  fee_reduction_provider_mock.json  fee_reduction_provider_mock.wasm  flash_loan_receiver_mock.contract  flash_loan_receiver_mock.json  flash_loan_receiver_mock.wasm  flipper.contract  flipper.json  flipper.wasm  lending_pool.contract  lending_pool.json  lending_pool.wasm  price_feed_provider.contract  (+20 more)
scripts/: ansiToHtml.ts  deployAudit.ts  deployDev.ts  deployTest.ts  fixupNodeLog.ts  protocolDeploymentTest.ts  testSeeds.json
scripts/compile/: common.ts  compileAllContracts.ts  compileSingleContract.ts
scripts/mainnetDeployment/: 00_constants.ts  01_bonusList.ts  01_bonus_list.json  01_stakedropList.ts  02_bonusList.ts  02_stakedropList.ts  02_stakedrop_result.json  03_referrerList.ts  03_referrer_list.json  10_deployContracts.ts  20_distributeStakedrop.ts  20_initTGE.ts  20_setBonus.ts  21_distributeStakedrop.ts  21_setBonus.ts  22_distributeStakedrop.ts  22_registerReferrers.ts  23_registerReferrers.ts  24_collect.ts  cfg_seed.ts  run_all.sh  utils.ts
scripts/mainnetDeployment/results/: 10_executed_tx_results.json  deployedContracts.json
scripts/proposals/: README.md  common.ts  template.ts
scripts/proposals/00/: deployAVTokens.ts  deployBalanceViewer.ts  deployLP.ts  deployPriceFeedProviderAndConfigure.ts
scripts/proposals/01/: 01_proposal_prep.ts  01_proposal_submit.ts  consts.ts
scripts/typechain/: generateEventsEnum.ts
src/: .rustfmt.toml  Cargo.toml  rust-toolchain.toml
src/contracts/abax_governor/: Cargo.toml  lib.rs  subscan_verify.json
src/contracts/abax_inflator/: Cargo.toml  lib.rs  subscan_verify.json
src/contracts/abax_inflator/modules/: mod.rs
src/contracts/abax_inflator/modules/inflator/: errors.rs  events.rs  mod.rs  traits.rs
src/contracts/abax_inflator/modules/inflator/storage_fields/: inflator.rs
src/contracts/abax_tge/: Cargo.toml  constants.rs  lib.rs  subscan_verify.json
src/contracts/abax_tge/modules/: constants.rs  errors.rs  events.rs  mod.rs  structs.rs  traits.rs
src/contracts/abax_tge/modules/storage_fields/: public_contribution.rs
src/contracts/abax_tge/modules/tge/: errors.rs  mod.rs  traits.rs
src/contracts/abax_tge/modules/tge/storage_fields/: mod.rs  public_contribution.rs
src/contracts/abax_token/: Cargo.toml  lib.rs  subscan_verify.json
src/contracts/abax_token/modules/: capped_infaltion_storage_field.rs  mod.rs  traits.rs
src/contracts/abax_token/modules/capped_inflation/: capped_infaltion_storage_field.rs  mod.rs  reserved.rs  traits.rs
src/contracts/abax_treasury/: Cargo.toml  lib.rs  subscan_verify.json
src/contracts/abax_treasury/modules/: errors.rs  events.rs  structs.rs  traits.rs
src/contracts/abax_treasury/modules/storage_fields/: operations.rs
src/contracts/abax_treasury/modules/treasury/: errors.rs  events.rs  structs.rs  traits.rs
src/contracts/abax_treasury/modules/treasury/storage_fields/: operations.rs
src/contracts/abax_vester/: Cargo.toml  lib.rs  (+1 more)
src/contracts/governor/: Cargo.toml  lib.rs
src/contracts/governor/governor_storage/: govern_storage_item.rs  locked_shares_storage_item.rs  mod.rs  unstake_storage_item.rs
src/contracts/governor/helpers/: finalization.rs  hashes.rs  mul_div.rs
src/contracts/governor/modules/: mod.rs
src/contracts/governor/modules/govern/: mod.rs
src/contracts/governor/modules/govern/helpers/: finalization.rs  hashes.rs  mod.rs
src/contracts/governor/modules/govern/storage/: govern_storage_item.rs  locked_shares_storage_item.rs  vault_counter_storage_item.rs
src/contracts/governor/modules/govern/traits/: errors.rs  events.rs  govern.trait.rs  govern_internal.trait.rs  govern_manage.trait.rs  govern_view.trait.rs  mod.rs
src/contracts/governor/modules/govern/traits/structs/: proposal.rs  proposal_state.rs  transaction.rs  voting_rules.rs
src/contracts/governor/traits/: errors.rs  events.rs  govern.trait.rs  govern_internal.trait.rs  govern_manage.trait.rs  govern_view.trait.rs  mod.rs
src/contracts/governor/traits/structs/: mod.rs  proposal.rs  proposal_state.rs  proposal_status.rs  transaction.rs  user_vote.rs  vote.rs  voting_rules.rs
src/contracts/proposals/configure_initial_market_proposal/: Cargo.toml  lib.rs
src/contracts/test_purpose/psp22_emitable/: Cargo.toml  lib.rs  out.json
src/contracts/test_purpose/register_asset_proposal/: Cargo.toml  lending_pool_error.rs  lib.rs
src/contracts/test_purpose/wazero/: Cargo.toml  lib.rs  traits.rs
tests/: abax_inflator.test.ts  abax_token.test.ts  abax_treasury.test.ts  consts.ts  globalHooks.ts  governor.stake.test.ts  governor.stake.util.ts  governor.test.ts  make-suite.ts  misc.ts  paramsHexConversionUtils.ts  soft-assert.ts  tge.spec.ts  tsUtils.ts  validateEvents.ts
tests/setup/: chai.ts  changeBNResult.ts  changeBaseCreatedAmounts.ts  changeBonusCreatedAmounts.ts  changeContributedAmounts.ts  changeReservedTokenAmounts.ts  changeTgeStorage.ts  createSpendingOrder.ts  createVestingSchedule.ts  deploymentHelpers.ts  helpers.ts  nodePersistence.ts  queryAt.ts  queryTGE.ts  queryTGEGetAccountStorage.ts  queryTGEGetStorage.ts  queryTreasury.ts  queryVester.ts
tests/types/: PSP22Metadata.ts
(+26 files in other folders)
