[package]
name = "abax_inflator"
version = "1.0.0"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }


pendzl = { version = "=1.0.1-v1calls", default-features = false, features = [
    "psp22_mintable",
    "access_control_impl",
] }


[lib]
name = "abax_inflator"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "pendzl/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
panic = "abort"
lto = false
[profile.release]
panic = "abort"
lto = false
