[package]
name = "abax_tge"
version = "0.1.0-alpha"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
    "derive",
    "chain-error"
] }
scale-info = { version = "2.10", default-features = false, features = [
    "derive",
], optional = true }

# These dependencies
pendzl = { path = "../../../../simple_pendzl", default-features = false, features = [
    "psp22",
    "general_vest",
    "psp22_mintable",
    "access_control_impl",
] }


primitive-types = { version = "0.12.1", default-features = false, features = [
    "codec",
] }

[lib]
name = "abax_tge"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "pendzl/std",
    "primitive-types/std",
    "primitive-types/scale-info",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
panic = "abort"
lto = false
[profile.release]
panic = "abort"
lto = false
