[package]
name = "governor"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
    "derive",
    "chain-error",
] }
scale-info = { version = "2.10", default-features = false, features = [
    "derive",
], optional = true }

pendzl = { vesrions = "0.2.0-alpha", default-features = false, features = [
    "psp22_impl",
    "psp22_vault_impl",
    "psp22_vault_metadata_impl",
    "access_control_impl",
    "general_vest_impl",
    "provide_vest_schedule_info",
    "upgradeable_impl",
] }

ethnum = { version = "1.5", default-features = false }


[dev-dependencies]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "pendzl/std"]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
panic = "abort"
lto = false
[profile.release]
panic = "abort"
lto = false
