[package]
name = "psp22_emitable"
version = "0.1.1"
authors = [""]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
    "derive",
    "chain-error",
] }
scale-info = { version = "2.11", default-features = false, features = [
    "derive",
], optional = true }


pendzl = { path = "../../../../../pendzl", default-features = false, features = [
    "psp22",
    "psp22_impl",
    "psp22_metadata",
    "psp22_metadata_impl",
    "psp22_mintable",
    "psp22_mintable_impl",
] }


[lib]
name = "psp22_emitable"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "pendzl/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
panic = "abort"
lto = false
[profile.release]
panic = "abort"
lto = false
